==> killeder/GoRail_Pager/Hardware/HW_RADIO_CC1101.c <==
#include "Hardware.h"
#define CC1101_SPIx_CLOCK 	RCC_APB1Periph_SPI2	//CC1101所使用硬件SPI时钟
#define CC1101_SPIx 	  	SPI2  				//CC1101所使用的硬件SPI号
#define CC1101_SCK_CLOCK	RCC_APB2Periph_GPIOB	//SPI时钟引脚PB13
#define CC1101_SCK_PORT		GPIOB
#define CC1101_SCK_PIN		GPIO_Pin_13
#define CC1101_MISO_CLOCK	RCC_APB2Periph_GPIOB	//SPI的MISO引脚PB14
#define CC1101_MISO_PORT	GPIOB
#define CC1101_MISO_PIN		GPIO_Pin_14
#define CC1101_MOSI_CLOCK	RCC_APB2Periph_GPIOB	//SPI的MOSI引脚PB15
#define CC1101_MOSI_PORT	GPIOB
#define CC1101_MOSI_PIN		GPIO_Pin_15
#define CC1101_CS_CLOCK 	RCC_APB2Periph_GPIOB	//SPI的片选引脚PB12
#define CC1101_CS_PORT 		GPIOB
#define CC1101_CS_PIN 		GPIO_Pin_12
#define	CC1101_CS_High()	CC1101_CS_PORT->BSRR = CC1101_CS_PIN//拉高片选（失能）
#define	CC1101_CS_Low() 	CC1101_CS_PORT->BRR = CC1101_CS_PIN	//拉低片选（使能）
#define CC1101_IRQ_PORT 	GPIOB 					//CC1101中断引脚PC0(连接到GDO2)
#define CC1101_IRQ_CLOCK 	RCC_APB2Periph_GPIOB
#define CC1101_IRQ_PIN		GPIO_Pin_0
#define CC1101_IRQ_PORTSOURCE 	GPIO_PortSourceGPIOB	//外部中断端口源
#define CC1101_IRQ_PINSOURCE 	GPIO_PinSource0		//外部中断引脚源
#define CC1101_IRQ_LINE		EXTI_Line0				//外部中断线
#define CC1101_IRQ_IRQn		EXTI0_IRQn			//外部中断标号(位于stm32f10x.h头文件)
#define CC1101_IRQ_Handler  EXTI0_IRQHandler	//外部中断响应程序入口(位于s启动文件中)

static void HwSPI_Init(void)
{
	GPIO_InitTypeDef	GPIO_InitStructure;
	SPI_InitTypeDef		SPI_InitStructure;
	//1.初始化SPIx使用到的四个引脚
	RCC_APB2PeriphClockCmd(CC1101_SCK_CLOCK|CC1101_MISO_CLOCK|
							CC1101_MOSI_CLOCK|CC1101_CS_CLOCK,ENABLE);
							//打开SPI涉及的4个引脚的时钟
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;//复用推挽输出
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;//频率10MHz
	GPIO_InitStructure.GPIO_Pin = CC1101_SCK_PIN;
	GPIO_Init(CC1101_SCK_PORT,&GPIO_InitStructure);//设置SCK引脚

	GPIO_InitStructure.GPIO_Pin = CC1101_MISO_PIN;
	GPIO_Init(CC1101_MISO_PORT,&GPIO_InitStructure);//设置MISO引脚

	GPIO_InitStructure.GPIO_Pin = CC1101_MOSI_PIN;
	GPIO_Init(CC1101_MOSI_PORT,&GPIO_InitStructure);//设置MOSI引脚

	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;//推挽输出
	GPIO_InitStructure.GPIO_Pin = CC1101_CS_PIN;
	GPIO_Init(CC1101_CS_PORT,&GPIO_InitStructure);//设置CS引脚
	CC1101_CS_High();	//拉高片选，使CC1101芯片失能
	//2.初始化硬件SPI
	SPI_I2S_DeInit(CC1101_SPIx);			//复位SPI
	if(CC1101_SPIx == SPI1)
		RCC_APB2PeriphClockCmd(CC1101_SPIx_CLOCK,ENABLE);//SPI1位于APB2
	else
		RCC_APB1PeriphClockCmd(CC1101_SPIx_CLOCK,ENABLE);//SPI2,3位于APB1
	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;		//空闲时低电平
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;	//在上升沿采样，MODE0
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_8;// 72/8=9MHz
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(CC1101_SPIx,&SPI_InitStructure);
	SPI_Cmd(CC1101_SPIx,ENABLE);	//使能SPI1
}

static void SPISendByte(uint8_t data)
{
	while(SPI_I2S_GetFlagStatus(CC1101_SPIx, SPI_I2S_FLAG_TXE) == RESET)
	{
	}	//等待发送缓存空
	SPI_I2S_SendData(CC1101_SPIx, data);	//发送一字节数据
	while(SPI_I2S_GetFlagStatus(CC1101_SPIx, SPI_I2S_FLAG_RXNE) == RESET)
	{
	}	//等待接收缓冲区空
	SPI_I2S_ReceiveData(CC1101_SPIx);	//收一字节数据（状态字）并舍弃	
}

static uint8_t SPIReadByte(void)
{
	uint8_t retval = 0;	//读取到的数据

	while(SPI_I2S_GetFlagStatus(CC1101_SPIx, SPI_I2S_FLAG_TXE) == RESET)
	{
	}	//等待发送缓存空
	SPI_I2S_SendData(CC1101_SPIx, 0xFF);	//发送一字节Dummy数据
	while(SPI_I2S_GetFlagStatus(CC1101_SPIx, SPI_I2S_FLAG_RXNE) == RESET)
	{
	}	//等待接收缓冲区空
	retval = SPI_I2S_ReceiveData(CC1101_SPIx);	//收一字节数据

	return retval;
}

static void SPIwriteRegister(uint8_t reg, uint8_t data)
{
	if(reg > CC1101_REG_TEST0)
		reg |= CC1101_CMD_ACCESS_STATUS_REG;
	SPItransfer(CC1101_CMD_WRITE,reg,&data,NULL,1);
}

static uint8_t SPIreadRegister(uint8_t reg)
{
	uint8_t retval = 0;

	if(reg > CC1101_REG_TEST0)
		reg |= CC1101_CMD_ACCESS_STATUS_REG;
	SPItransfer(CC1101_CMD_READ,reg,NULL,&retval,1);

	return retval;
}

static void GDO2_ExtIRQ_Init(void)
{
	GPIO_InitTypeDef	GPIO_InitStructure;
	EXTI_InitTypeDef	EXTI_InitStructure;
	NVIC_InitTypeDef	NVIC_InitStructure;
	//1.初始化GDO2连接到的引脚
	RCC_APB2PeriphClockCmd(CC1101_IRQ_CLOCK,ENABLE);//打开外部中断引脚的时钟
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPD;//下拉输入
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;//频率10MHz
	GPIO_InitStructure.GPIO_Pin = CC1101_IRQ_PIN;
	GPIO_Init(CC1101_IRQ_PORT,&GPIO_InitStructure);//设置外部中断引脚	
	//2.初始化EXTI中断
	GPIO_EXTILineConfig(CC1101_IRQ_PORTSOURCE,CC1101_IRQ_PINSOURCE);	//选择EXTI的信号源	
	EXTI_InitStructure.EXTI_Line = CC1101_IRQ_LINE; //选择相应中断线
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;	//选择为中断模式
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;	//下降沿触发
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;	//使能中断线
	EXTI_Init(&EXTI_InitStructure);

	NVIC_InitStructure.NVIC_IRQChannel = CC1101_IRQ_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0; //抢占优先级
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3;	//次优先级
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);	
}
