==> LightWind1/ESP32_Arduino_LBJ/HW_RADIO_CC1101.cpp <==
#include <SPI.h>
#include <Arduino.h>
#include "HW_RADIO_CC1101.h"
#define	CC1101_CS_High()	digitalWrite(CC1101_CS_PIN, HIGH);  //拉高片选（失能）
#define	CC1101_CS_Low() 	digitalWrite(CC1101_SCK_PIN, LOW);	//拉低片选（使能）

static void HwSPI_Init(void)
{
  SpiStart();                   //spi initialization
  digitalWrite(CC1101_CS_PIN, HIGH);
  digitalWrite(CC1101_SCK_PIN, HIGH);
  digitalWrite(CC1101_CS_PIN, LOW);
  Reset();                    //CC1101 reset
  SpiEnd();
}

static void SPISendByte(uint8_t data)
{	
  //printf("SEND BYTE");
  SpiStart();
  digitalWrite(CC1101_CS_PIN, LOW);
  while(digitalRead(CC1101_MISO_PIN));
  SPI.transfer(data);
  digitalWrite(CC1101_CS_PIN, HIGH);
  SpiEnd();
}

static uint8_t SPIReadByte(void)
{	
	//printf("READ BYTE");
	uint8_t retval = 0;	//读取到的数据
	SpiStart();
  	digitalWrite(CC1101_CS_PIN, LOW);
  	while(digitalRead(CC1101_MISO_PIN));
  	retval = SPI.transfer(0);
  	digitalWrite(CC1101_CS_PIN, HIGH);
  	SpiEnd();
	return retval;
}

static void SPIwriteRegister(uint8_t reg, uint8_t data)
{
    SpiStart();
    digitalWrite(CC1101_CS_PIN, LOW);
    while(digitalRead(CC1101_MISO_PIN));
    SPI.transfer(reg);
    SPI.transfer(data); 
    digitalWrite(CC1101_CS_PIN, HIGH);
    SpiEnd();
}

static uint8_t SPIreadRegister(uint8_t reg)
{
    uint8_t temp, value;
    SpiStart();
    temp = reg| CC1101_CMD_READ;
    digitalWrite(CC1101_CS_PIN, LOW);
    while(digitalRead(CC1101_MISO_PIN));
    SPI.transfer(temp);
    value=SPI.transfer(0);
    digitalWrite(CC1101_CS_PIN, HIGH);
    SpiEnd();
    return value;
}

static void GDO2_ExtIRQ_Init(void)
{	
	// initialize the GPIO pins
	//pinMode(CC1101_GDO2_PIN, INPUT_PULLDOWN);
	pinMode(CC1101_GDO0_PIN, INPUT);
	pinMode(CC1101_GDO2_PIN, INPUT);
	printf("Init GDO\n");
}
